feat: implement idempotency key for registration
