# service/user/internal/grpc/handler/user_command.go
@@ -3,10 +3,16 @@ package handler
 import (
 	"context"
 
+	"google.golang.org/grpc/metadata"
+
 	apiv1 "github.com/indrasaputra/arjuna/proto/api/v1"
 	"github.com/indrasaputra/arjuna/service/user/entity"
 	"github.com/indrasaputra/arjuna/service/user/internal/app"
 	"github.com/indrasaputra/arjuna/service/user/internal/service"
+)
+
+const (
+	headerIdempotencyKey = "x-idempotency-key"
 )
 
 // UserCommand handles HTTP/2 gRPC request for state-changing user.
@@ -22,12 +28,21 @@ func NewUserCommand(registrar service.RegisterUser) *UserCommand {
 
 // RegisterUser handles HTTP/2 gRPC request similar to POST in HTTP/1.1.
 func (uc *UserCommand) RegisterUser(ctx context.Context, request *apiv1.RegisterUserRequest) (*apiv1.RegisterUserResponse, error) {
+	md, ok := metadata.FromIncomingContext(ctx)
+	if !ok {
+		return nil, entity.ErrInternal("metadata not found from incoming context")
+	}
+	key := md[headerIdempotencyKey]
+	if len(key) == 0 {
+		return nil, entity.ErrMissingIdempotencyKey()
+	}
+
 	if request == nil || request.GetUser() == nil {
 		app.Logger.Errorf(ctx, "[UserCommand-RegisterUser] empty or nil user")
 		return nil, entity.ErrEmptyUser()
 	}
 
-	id, err := uc.registrar.Register(ctx, createUserFromRegisterUserRequest(request))
+	id, err := uc.registrar.Register(ctx, createUserFromRegisterUserRequest(request), key[0])
 	if err != nil {
 		app.Logger.Errorf(ctx, "[UserCommand-RegisterUser] fail register user: %v", err)
 		return nil, err
